
hicolor_ICONS = \
	stopmotion.svg

pixmap_ICONS = \
	2bWM.save.svg \
	2bWM.svg \
	abe.png \
	abiword_48.svg \
	abiword.svg \
	accessories-text-editor.svg \
	acroread.svg \
	AdobeReader8.svg \
	AdobeReader.svg \
	adobe-reader.svg \
	adwm.svg \
	aewm.svg \
	AfterStep.svg \
	alacarte.svg \
	alltray.svg \
	amsn.svg \
	amule.svg \
	anyremote.svg \
	apparmor_app_armor.svg \
	apple-green.png \
	apple-red.png \
	application-default-icon.svg \
	application-x-remote-connection.svg \
	application-x-vnc.svg \
	archlinux-wm-awesome.svg \
	archlinux-wm-base.svg \
	archlinux-wm-blackbox.svg \
	archlinux-wm-dwm.svg \
	archlinux-wm-fluxbox.svg \
	archlinux-wm-fvwm.svg \
	archlinux-wm-gnome.svg \
	archlinux-wm-icewm.svg \
	archlinux-wm-jwm.svg \
	archlinux-wm-kde2.svg \
	archlinux-wm-kdemod.svg \
	archlinux-wm-kde.svg \
	archlinux-wm-openbox.svg \
	archlinux-wm-pekwm.svg \
	archlinux-wm-twm.svg \
	archlinux-wm-wmaker.svg \
	archlinux-wm-xfce.svg \
	archlinux-wm-xmonad.svg \
	arch-logo.svg \
	ardour.svg \
	assistant3.png \
	audacious2.svg \
	audacity.svg \
	audio-player.svg \
	avidemux_icon.svg \
	avidemux.svg \
	awesome.svg \
	Azureus.svg \
	azureus.svg \
	background.svg \
	badge-small.svg \
	balsa.svg \
	baobab.svg \
	bash.svg \
	blackbox.svg \
	blender.svg \
	bluefish_icon.svg \
	bluefish-icon.svg \
	bluefish.svg \
	blueradio-48.svg \
	blueradio.svg \
	bluetooth-48.svg \
	bluetoothradio.svg \
	bluetooth.svg \
	boinc.png \
	bomberclone.png \
	bootdisk_create.svg \
	boot.svg \
	brasero.svg \
	bt-logo.svg \
	bum.svg \
	cacao-oj6.svg \
	cairo-clock.svg \
	caja.svg \
	ccsm.svg \
	chainsaw.png \
	chbg_64x64.xpm \
	checkbox.svg \
	checkgmail.png \
	cheese.svg \
	chemtool.png \
	cinelerra.svg \
	claws-mail.svg \
	clock.svg \
	compiz.svg \
	computerjanitor.svg \
	conduit-icon.svg \
	conduit.svg \
	cowbell.svg \
	critter.png \
	ctwm.svg \
	cupsprinter.png \
	cupsprinter.svg \
	cycle.xpm \
	d4x.svg \
	dasher.svg \
	debian.png \
	defaultgroup.svg \
	deja-dup.png \
	deja-dup-symbolic.svg \
	deluge.svg \
	deluge-torrent.svg \
	designer.png \
	desktop-effects.svg \
	devhelp.svg \
	dhcpcd.svg \
	dia_gnome_icon.svg \
	dia-gnome.svg \
	dia.svg \
	dillo.png \
	disks.png \
	display-capplet.svg \
	dogtail-head.svg \
	dogtail-tail.svg \
	dosbox.png \
	drakmenustyle.svg \
	drakstats.svg \
	drilogo.png \
	dvdisaster.png \
	dwm.svg \
	e16.png \
	eclipse.svg \
	edit-urpm-sources.svg \
	eekboard.svg \
	eeschema.svg \
	ekiga.svg \
	emacs.svg \
	email.svg \
	emerald.svg \
	emerald-theme-manager-icon.svg \
	emesene.svg \
	empathy.svg \
	eog.svg \
	epdfview.png \
	epiphany-bookmarks.svg \
	epiphany.png \
	e.png \
	eq.svg \
	eric.png \
	Eterm.png \
	Etermutilities-terminal.svg \
	etherape.png \
	etr.png \
	ettercap.svg \
	evilwm.svg \
	evince.svg \
	evolution-memos.svg \
	evolution.svg \
	evolution-tasklist.svg \
	evolution-tasks.svg \
	exaile.svg \
	exaile-tray-icon.svg \
	extremetuxracer.png \
	fedora-logo-icon.svg \
	fedora-logo-sprite.svg \
	file-manager.svg \
	file-roller2.png \
	file-roller3.png \
	file-roller.svg \
	filezilla.svg \
	firestarter.svg \
	firewall.svg \
	five-or-more.svg \
	flegita.svg \
	flobopuyo.png \
	flphoto.png \
	fluxbox.svg \
	force-exit.svg \
	freemind.png \
	frozen-bubble.png \
	f-spot.svg \
	fusion-icon.svg \
	fvwm-crystal.png \
	gajim.svg \
	gcolor2.png \
	gdebi.svg \
	gdeb.svg \
	gdmflexiserver.svg \
	gdm-foot-logo.png \
	gdm-login-photo.png \
	gdm-setup.svg \
	gdmsetup.svg \
	gdm-suse.svg \
	gdm.svg \
	gdm-xnest.svg \
	gdu-category-multidisk.svg \
	gdu-category-multipath.svg \
	gdu-category-peripheral.svg \
	gdu-check-disk.svg \
	gdu-detach.svg \
	gdu-eject.svg \
	gdu-emblem-lvm-lv.svg \
	gdu-emblem-lvm-vg.svg \
	gdu-emblem-mp-component.svg \
	gdu-emblem-mp.svg \
	gdu-emblem-raid0.svg \
	gdu-emblem-raid10.svg \
	gdu-emblem-raid1.svg \
	gdu-emblem-raid3.svg \
	gdu-emblem-raid4.svg \
	gdu-emblem-raid5.svg \
	gdu-emblem-raid6.svg \
	gdu-emblem-raid-linear.svg \
	gdu-encrypted-lock.svg \
	gdu-encrypted-unlock.svg \
	gdu-error.svg \
	gdu-expander.svg \
	gdu-hba.svg \
	gdu-info.svg \
	gdu-mount.svg \
	gdu-multidisk-drive.svg \
	gdu-raid-array-start.svg \
	gdu-raid-array-stop.svg \
	gdu-raid-array.svg \
	gdu-smart-failing.svg \
	gdu-smart-healthy.svg \
	gdu-smart-threshold.svg \
	gdu-smart-unknown.svg \
	gdu-unmountable.svg \
	gdu-unmount.svg \
	gdu-warning.svg \
	geany.svg \
	geda-gattrib.svg \
	geda-gschem.svg \
	gedit-icon.svg \
	gedit-logo2.png \
	gedit-logo.svg \
	gedit-plugin-manager.png \
	gedit-plugin.png \
	geeqie.png \
	gftp.svg \
	ghemical-logo.png \
	ghemical.png \
	gimp.svg \
	gksu-debian.svg \
	gksu-root-terminal.svg \
	gl-117.png \
	glchess.svg \
	glipper.svg \
	gmplayer.svg \
	gnochm.svg \
	gnome-about-logo.png \
	gnome-aisleriot.svg \
	gnome-alsamixer-icon.png \
	gnome-aorta.png \
	gnome-app-install.svg \
	gnome-applets.png \
	gnome-apt.svg \
	gnome-ataxx.svg \
	gnome-background-image.png \
	gnome-background-pattern.png \
	gnome-background.png \
	gnomebaker-48.svg \
	gnomebaker.svg \
	gnome-blackjack.svg \
	gnome-blog.svg \
	gnome-bluetooth.svg \
	gnome-brightness-applet.svg \
	gnome-calc2.png \
	gnome-calc3.png \
	gnome-calendar.png \
	gnome-ccbackground.png \
	gnome-ccdesktop.png \
	gnome-ccdialog.png \
	gnome-ccmime.png \
	gnome-ccperiph.png \
	gnome-ccscreensaver.png \
	gnome-ccwindowmanager.svg \
	gnome-cd.png \
	gnome-chess-symbolic.svg \
	gnome-color-browser.png \
	gnome-color-xterm.png \
	gnome-computer.png \
	gnome-control-center.png \
	gnome-cpu-frequency-applet.svg \
	gnome-cromagnon.png \
	gnome-day.png \
	gnome-db.png \
	gnome-debian.png \
	gnome-default-dlg.png \
	gnome-desktop-ccperiph.png \
	gnome-dev-floppy.png \
	gnome-device-manager.svg \
	gnome-dictionary.svg \
	gnome-diskfree.png \
	gnome-display-properties.svg \
	gnome-do.svg \
	gnome-emacs.png \
	gnome-eog.png \
	gnome-error.png \
	gnome-eterm.svg \
	gnome-eyes-applet.svg \
	gnome-file-c.png \
	gnome-file-h.png \
	gnome-folder.png \
	gnome-freecell.svg \
	gnome-fs-blockdev.svg \
	gnome-fs-bookmark-missing.svg \
	gnome-fs-bookmark.svg \
	gnome-fs-client.png \
	gnome-fs-home.png \
	gnome-gemvt.png \
	gnome-gimp.png \
	gnome-glchess.svg \
	gnome-glines.svg \
	gnome-gmenu.svg \
	gnome-gmush.png \
	gnome-gnect.svg \
	gnome-gnibbles.svg \
	gnome-gnometris.svg \
	gnome-gnomine.svg \
	gnome-gnomoku.png \
	gnome-gnumeric.svg \
	gnome-grecord.png \
	gnome-help.svg \
	gnome-home.png \
	gnome-html.png \
	gnome-iagno.svg \
	gnome-image-gif.png \
	gnome-image-jpeg.png \
	gnome-info.png \
	gnome-inhibit-applet.svg \
	gnome-irc.png \
	gnome-klotski.svg \
	gnome-laptop.png \
	gnome-logo-icon.png \
	gnome-logo-icon-transparent.png \
	gnome-logo-large.png \
	gnome-logo-white.svg \
	gnome-log.png \
	gnome-mdi.png \
	gnome-mime-application-x-remote-connection.svg \
	gnome-mime-application-x-vnc.svg \
	gnome-mines.svg \
	gnome-mixer.png \
	gnome-mnemonic.png \
	gnome-monitor.svg \
	gnome-month.png \
	gnome-mouse.png \
	gnome-mplayer.svg \
	gnome-nettool.svg \
	gnome-network-preferences.svg \
	gnome-network-properties.svg \
	gnome-news.svg \
	gnome-nibbles.svg \
	gnome-note.svg \
	gnome-palm-conduit.png \
	gnome-palm.svg \
	gnome-panel-clock.svg \
	gnome-panel-drawer.svg \
	gnome-panel-fish.svg \
	gnome-panel-force-quit.svg \
	gnome-panel-launcher.svg \
	gnome-panel-notification-area.svg \
	gnome-panel-separator.svg \
	gnome-panel.svg \
	gnome-panel-window-list.svg \
	gnome-panel-window-menu.svg \
	gnome-panel-workspace-switcher.svg \
	gnome-pdf.svg \
	gnome-pilot2.svg \
	gnome-pilot.svg \
	gnome-planner.svg \
	gnome-power-manager.svg \
	gnome-power-statistics.svg \
	gnome-qeye.png \
	gnome-question.png \
	gnome-reclevel.svg \
	gnome-remote-desktop.svg \
	gnome-robots.svg \
	gnome-samegnome.svg \
	gnome-session-halt.svg \
	gnome-session-hibernate.svg \
	gnome-session-properties.svg \
	gnome-session-reboot.svg \
	gnome-session-sleep.svg \
	gnome-session-suspend.svg \
	gnome-session-switch.svg \
	gnome-set-time.svg \
	gnome-settings-background.svg \
	gnome-settings-default-applications.svg \
	gnome-settings-sound.svg \
	gnome-settings-theme.svg \
	gnome-shutdown.svg \
	gnome-sound-properties.svg \
	gnome-sound-recorder.svg \
	gnome-spider.png \
	gnome-squeak.png \
	gnome-sticky-notes-applet.svg \
	gnome-sudoku.svg \
	gnome-suse.png \
	gnome.svg \
	gnome-system-monitor.svg \
	gnome-tali.svg \
	gnome-talk.png \
	gnome-terminal.svg \
	gnome-term-linux2.png \
	gnome-term-linux.png \
	gnome-term-night.png \
	gnome-term.svg \
	gnome-term-tiger.png \
	gnome-tetravex.svg \
	gnome-tigert.png \
	gnome-touristinfo.png \
	gnome-translate.svg \
	gnome-user-interface.png \
	gnome-volume-control.svg \
	gnome-vumeter.svg \
	gnome-warning.png \
	gnome-week.png \
	gnome-window-manager.svg \
	gnome-windows.svg \
	gnome-word.svg \
	gnome-workspace.svg \
	gnome-xterm.svg \
	gnormalize.svg \
	gnote.svg \
	gnotski.svg \
	gnumeric.svg \
	GNUstep3D.svg \
	GNUstep.svg \
	gogglesmm.svg \
	gok.png \
	goobox.svg \
	gparted.svg \
	gpicview.svg \
	gpk-log.svg \
	gpk-prefs.svg \
	gpk-repo.svg \
	gpk-service-pack.svg \
	gpm-ac-adapter.svg \
	gpm-brightness.svg \
	gpm-hibernate.svg \
	gpm-keyboard-000.svg \
	gpm-keyboard-030.svg \
	gpm-keyboard-060.svg \
	gpm-keyboard-100.svg \
	gpm-mouse-000.svg \
	gpm-mouse-030.svg \
	gpm-mouse-060.svg \
	gpm-mouse-100.svg \
	gpm-primary-000-charging.svg \
	gpm-primary-000.svg \
	gpm-primary-020-charging.svg \
	gpm-primary-020.svg \
	gpm-primary-040-charging.svg \
	gpm-primary-040.svg \
	gpm-primary-060-charging.svg \
	gpm-primary-060.svg \
	gpm-primary-080-charging.svg \
	gpm-primary-080.svg \
	gpm-primary-100-charging.svg \
	gpm-primary-100.svg \
	gpm-primary-charged.svg \
	gpm-primary-missing.svg \
	gpm-suspend.svg \
	gpm-ups-000-charging.svg \
	gpm-ups-000.svg \
	gpm-ups-020-charging.svg \
	gpm-ups-020.svg \
	gpm-ups-040-charging.svg \
	gpm-ups-040.svg \
	gpm-ups-060-charging.svg \
	gpm-ups-060.svg \
	gpm-ups-080-charging.svg \
	gpm-ups-080.svg \
	gpm-ups-100-charging.svg \
	gpm-ups-100.svg \
	gpm-ups-charged.svg \
	gpm-ups-missing.svg \
	grandr.svg \
	grip.svg \
	gscan2pdf.svg \
	gsd-xrandr.svg \
	gstreamer-properties.png \
	gswitchit-applet.svg \
	gswitchit-properties-capplet.svg \
	gthumb.svg \
	gtk-help.svg \
	gtk-recordmydesktop.svg \
	gtkvim.png \
	gtranslator.svg \
	gucharmap.png \
	gufw_menu.svg \
	gvim.svg \
	gwget.svg \
	gxine.svg \
	harddrake.svg \
	hardinfo.svg \
	help-browser.svg \
	help-contents.svg \
	help.svg \
	hexchat.svg \
	hotwire.svg \
	htop.svg \
	hwbrowser.svg \
	hwinfo.svg \
	i3.svg \
	ibus-engine.svg \
	ibus-keyboard.svg \
	ibus-setup.svg \
	ibus.svg \
	idle.svg \
	image-viewer.svg \
	im-aim.svg \
	im-ekiga.svg \
	im-gadugadu.svg \
	im-gizmo.svg \
	im-google-talk.svg \
	im-groupwise.svg \
	im-icq.svg \
	im-irc.svg \
	im-jabber.svg \
	im-local-xmpp.svg \
	im-meanwhile.svg \
	im-msn.svg \
	im-mxit.svg \
	im-myspace.svg \
	im-qq.svg \
	im-sametime.svg \
	imsettings-applet.png \
	imsettings-unknown.png \
	im-silc.svg \
	im-sip.svg \
	im-yahoo.svg \
	im-zephyr.svg \
	inkscape.svg \
	internet-mail.svg \
	internet-news-reader.svg \
	invest-applet.svg \
	invest-big.svg \
	invest.svg \
	istanbul.svg \
	java.svg \
	javaws.png \
	jdownloader.svg \
	jokosher_icon.svg \
	jokosher.svg \
	jwm.svg \
	kasumi.png \
	kcmkwm.svg \
	kde.svg \
	kedit.svg \
	kentoo.svg \
	keyboardlayout.svg \
	keyring.png \
	kfm.svg \
	khelpcenter.svg \
	kicad.svg \
	kino.svg \
	konsole.svg \
	kpackage.svg \
	kscreensaver.svg \
	ksysguard.svg \
	ktip.svg \
	kuser.svg \
	kwin.svg \
	kynpatic.svg \
	language-selector.svg \
	larswm.svg \
	libreoffice-base.svg \
	libreoffice-calc.svg \
	libreoffice-draw.svg \
	libreoffice-impress.svg \
	libreoffice-main.svg \
	libreoffice-math.svg \
	libreoffice-startcenter.svg \
	libreoffice-writer.svg \
	liferea.svg \
	linguist3.png \
	lives.svg \
	localedrake.svg \
	locale.svg \
	logfactor5.png \
	login-photo.png \
	lpi-translate.svg \
	lv_icon.svg \
	mail_generic.svg \
	mandrivaupdate.svg \
	mate-network-properties.svg \
	mate-notification-properties.svg \
	mate-panel-clock.svg \
	mate-panel-drawer.svg \
	mate-panel-fish.svg \
	mate-panel-force-quit.svg \
	mate-panel-launcher.svg \
	mate-panel-notification-area.svg \
	mate-panel-separator.svg \
	mate-panel.svg \
	mate-panel-window-list.svg \
	mate-panel-window-menu.svg \
	mate-panel-workspace-switcher.svg \
	mate-preferences-desktop-display.svg \
	mate-session-properties.svg \
	mate-typing-monitor.svg \
	media-player-banshee.svg \
	meld.svg \
	menu-editor.svg \
	midori.svg \
	mirage.svg \
	miro-128x128.svg \
	miro-24x24.svg \
	miro-48x48.svg \
	miro-72x72.svg \
	miro.svg \
	monitor.png \
	mousepad.svg \
	mplayer.svg \
	msg_error.svg \
	msg_info.svg \
	msg_warning.svg \
	mwm.svg \
	nautilus-actions.svg \
	nautilus-cd-burner.svg \
	nautilus-gdu.svg \
	nautilus.svg \
	nm-device-wired.svg \
	nm-no-connection.svg \
	nobody.png \
	nohost.png \
	notification-properties.svg \
	novell-button.png \
	nt.svg \
	nt-wm.svg \
	nx.svg \
	office-mail.svg \
	office-writer.svg \
	ogmrip.svg \
	ooo3.0.svg \
	ooo-base3.0.svg \
	ooo-base.svg \
	ooo-calc3.0.svg \
	ooo-calc.svg \
	ooo-draw3.0.svg \
	ooo-draw.svg \
	ooo-fromtemplate3.0.svg \
	ooo-fromtemplate.svg \
	ooo-gulls3.0.svg \
	ooo-gulls.svg \
	ooo-impress3.0.svg \
	ooo-impress.svg \
	ooo-main3.0.svg \
	ooo-main.svg \
	ooo-math3.0.svg \
	ooo-math.svg \
	ooo-printeradmin3.0.svg \
	ooo-printeradmin.svg \
	ooo.svg \
	ooo-template3.0.svg \
	ooo-template.svg \
	ooo-web3.0.svg \
	ooo-web.svg \
	ooo-writer3.0.svg \
	ooo-writer.svg \
	opennx-admin.svg \
	opennx-wizard.svg \
	openoffice3.0.svg \
	openofficeorg3.0-base.svg \
	openofficeorg3.0-calc.svg \
	openofficeorg3.0-draw.svg \
	openofficeorg3.0-fromtemplate.svg \
	openofficeorg3.0-gulls.svg \
	openofficeorg3.0-impress.svg \
	openofficeorg3.0-main.svg \
	openofficeorg3.0-math.svg \
	openofficeorg3.0-printeradmin.svg \
	openofficeorg3.0.svg \
	openofficeorg3.0-template.svg \
	openofficeorg3.0-web.svg \
	openofficeorg3.0-writer.svg \
	openofficeorg3-base.svg \
	openofficeorg3-calc.svg \
	openofficeorg3-draw.svg \
	openofficeorg3-fromtemplate.svg \
	openofficeorg3-gulls.svg \
	openofficeorg3-impress.svg \
	openofficeorg3-main.svg \
	openofficeorg3-math.svg \
	openofficeorg3-printeradmin.svg \
	openofficeorg3.svg \
	openofficeorg3-template.svg \
	openofficeorg3-web.svg \
	openofficeorg3-writer.svg \
	openofficeorg-base.svg \
	openofficeorg-calc.svg \
	openofficeorg-draw.svg \
	openofficeorg-fromtemplate.svg \
	openofficeorg-gulls.svg \
	openofficeorg-impress.svg \
	openofficeorg-main.svg \
	openofficeorg-math.svg \
	openofficeorg-printeradmin.svg \
	openofficeorg.svg \
	openofficeorg-template.svg \
	openofficeorg-web.svg \
	openofficeorg-writer.svg \
	openoffice.svg \
	openterm.svg \
	orca.svg \
	os_debian.png \
	oxine.svg \
	package-manager-icon.svg \
	palimpsest.svg \
	palm-pilot.svg \
	panel-tile.png \
	pan.svg \
	paraicon.png \
	password.png \
	pavumeter.svg \
	pawm.svg \
	pcmanfm.svg \
	pekwm.svg \
	phonon-gstreamer.svg \
	pidgin-menu.svg \
	pidgin.svg \
	pirut.svg \
	pitivi.svg \
	pixie.svg \
	pk-package-sources.svg \
	porthole.svg \
	poweredby.png \
	preferences-desktop-default-applications.svg \
	preferences-desktop-keyboard.svg \
	preferences-desktop-locale.svg \
	preferences-desktop-multimedia.svg \
	preferences-desktop-remote-desktop.svg \
	preferences-desktop-screensaver.svg \
	preferences-desktop-sound.svg \
	preferences-desktop-theme.svg \
	preferences-desktop-wallpaper.svg \
	preferences-sound.svg \
	preferences-system-firewall-new.svg \
	preferences-system-firewall.svg \
	preferences-system-windows.svg \
	preferences-theme.svg \
	preferences-wallpaper.svg \
	printer2.svg \
	puplet-screenshot.png \
	pup.svg \
	pybliographic.svg \
	pycrust.png \
	pyrenamer.svg \
	pyshell.png \
	python2.5.svg \
	python2.6.svg \
	python3.0.svg \
	python.svg \
	qemu-launcher.svg \
	qphotorec.svg \
	qtconfig.svg \
	QtProject-designer.png \
	qucs.svg \
	qv4l2.svg \
	rapidsvn.svg \
	rclock.svg \
	reboot-notifier.svg \
	redhat-accessories.png \
	redhat-applications.png \
	redhat-email.svg \
	redhat-extras.png \
	redhat-filemanager.svg \
	redhat-games.png \
	redhat-graphics.png \
	redhat-home.png \
	redhat-internet.png \
	redhat-main-menu.png \
	redhat-office.png \
	redhat-preferences.png \
	redhat-presentations.png \
	redhat-programming.png \
	redhat-server_settings.png \
	redhat-sound_video.png \
	redhat-spreadsheet.png \
	redhat-starthere.png \
	redhat-system_settings.png \
	redhat-system_tools.png \
	redhat-tools.png \
	redhat-web-browser.png \
	redhat-word-processor.png \
	referencer.svg \
	remmina.svg \
	resapplet.svg \
	rhythmbox-notplaying.svg \
	rhythmbox.svg \
	rhythmbox-tray-icon.svg \
	rip.svg \
	ristretto.svg \
	route.svg \
	rox.svg \
	roxterm.svg \
	rpmdrake.svg \
	samba_setup.svg \
	sane.png \
	scim-setup.svg \
	screensaver.svg \
	scribus.svg \
	seahorse-applet.svg \
	seahorse-preferences.svg \
	seahorse.svg \
	serpentine.svg \
	session-properties.svg \
	simple-ccsm.svg \
	skype.svg \
	sleep.svg \
	smplayer.svg \
	software-properties.svg \
	sound-juicer.svg \
	spectrwm.svg \
	status_lock.png \
	status_unlocked.png \
	sticky-notes.svg \
	stock_alarm.svg \
	stock_bluetooth.svg \
	stock_bookmark.svg \
	stock_delete-bookmark.svg \
	stock_edit-bookmark.svg \
	stock_help-agent.svg \
	stock_help.svg \
	stock_insert-note.svg \
	stock_mail-open.svg \
	stock_mail.svg \
	stock_new-spreadsheet.svg \
	stock_news.svg \
	stock_notes.svg \
	stock_printers.png \
	stock_task.svg \
	stock_todo.svg \
	style.svg \
	sun-java6.svg \
	sun_java.svg \
	susehelpcenter.svg \
	suse-menustripe.png \
	SuSEmenu.svg \
	synaptic.svg \
	sync_broken.png \
	sync_icon.png \
	syncing_icon.png \
	sync_paused.png \
	system-config-boot.svg \
	system-config-date.svg \
	system-config-display.svg \
	system-config-firewall.svg \
	system-config-language.svg \
	system-config-rootpassword.svg \
	system-config-securitylevel.svg \
	system-file-manager.svg \
	system-hibernate.svg \
	system-installer.svg \
	system-logo.png \
	system-logo-small.png \
	system-logo-white.png \
	system-release-white.png \
	system-restart.svg \
	system-shutdown-panel.svg \
	system-shut-down.svg \
	system-shutdown.svg \
	system-software-installer.svg \
	system-software-install.svg \
	system-software-update.svg \
	system-suspend-hibernate.svg \
	system-suspend.svg \
	system.svg \
	system-switch-user.svg \
	taskbar.svg \
	tdsl.svg \
	temp-home.png \
	Terminal.svg \
	terminal.svg \
	text-editor.svg \
	Thunar.svg \
	tigervnc.svg \
	tightvnc.svg \
	tilda.svg \
	time.svg \
	tint2conf.svg \
	tomboy-note.svg \
	tomboy.svg \
	totem.svg \
	totem-symbolic.svg \
	touchpad.svg \
	transmission.svg \
	tsclient.svg \
	tvm-burn-cd.svg \
	twm.svg \
	typing-monitor.svg \
	un-reboot.svg \
	update-manager.svg \
	usb-creator-gtk.svg \
	usb-creator.svg \
	user_add.svg \
	user-bookmarks.svg \
	user_icon.png \
	utilities-system-monitor.svg \
	utilities-terminal.svg \
	VBox.svg \
	velox.svg \
	vim.svg \
	vinagre.svg \
	virtualbox.svg \
	vlc.svg \
	vmplayer.svg \
	vmware-player.svg \
	vmware-server-console.svg \
	vmware-server.svg \
	vmware.svg \
	vmware-workstation.svg \
	vtwm.svg \
	wallpaper.svg \
	wesnoth-icon.svg \
	wesnoth.svg \
	windwm.svg \
	winecfg.svg \
	wine-doors.svg \
	wine-notepad.svg \
	wine.svg \
	wine-uninstaller.svg \
	wine-winecfg.svg \
	wine-winefile.svg \
	wm2.svg \
	wmaker.svg \
	wmii.svg \
	wmtweaks.svg \
	wmudmount-lock.svg \
	wmudmount-unlock.svg \
	wmx.svg \
	workspace-switcher.svg \
	www.svg \
	xarchiver.svg \
	xboard.svg \
	xchat2.svg \
	xchat-gnome.svg \
	xchat.svg \
	xde.svg \
	xdvi.png \
	xdwm.svg \
	xfardic-logo.svg \
	xfce4-autostart-editor.svg \
	xfce4-backdrop.svg \
	xfce4-clock.svg \
	xfce4-menueditor.svg \
	xfce4-notes-plugin.svg \
	xfce4-session.svg \
	xfce4-splash.svg \
	xfce4-systray.svg \
	xfce4-taskbar.svg \
	xfce4-ui.svg \
	xfce4-workspaces.svg \
	xfce4_xicon1.svg \
	xfce-edit.svg \
	xfce-filemanager.svg \
	xfce-mail.svg \
	xfce-man.svg \
	xfce-schedule.svg \
	xfce-sound.svg \
	xfce-terminal.svg \
	xfsm-hibernate.svg \
	xfsm-reboot.svg \
	xfsm-shutdown.svg \
	xfsm-suspend.svg \
	xfsm-switch.svg \
	xfwm4.svg \
	xine.svg \
	xlogo.svg \
	xmms2-black-on-white.svg \
	xmms2.svg \
	xmms2-white-on-black.svg \
	x-office-mail.svg \
	XPaintIcon.xpm \
	xpdf-rosa.svg \
	x-pdf.svg \
	xpdf.svg \
	xplanetFX.svg \
	xrdp.png \
	xsane.svg \
	xsane.xpm \
	xscreensaver.svg \
	x-system-software-sources.svg \
	xterm.svg \
	xvkbd.svg \
	yast-addon.svg \
	yast-answering_machine.svg \
	yast-autofs.svg \
	yast-autoyast.svg \
	yast-backup.svg \
	yast-bluetooth.svg \
	yast-bootfloppy.svg \
	yast-bootloader.svg \
	yast-bootmsg.svg \
	yast-ca_mgm.svg \
	yast-cd-creator.svg \
	yast-cdrom.svg \
	yast-cd_update.svg \
	yast-checkmedia.svg \
	yast-common_cert.svg \
	yast-controller.svg \
	yast-dasd.svg \
	yast-dhcp-server.svg \
	yast-dirinstall.svg \
	yast-disk.svg \
	yast-dns-server.svg \
	yast-dns.svg \
	yast-dsl.svg \
	yast-dump.svg \
	yast-fax.svg \
	yast-fingerprint.svg \
	yast-firewall.svg \
	yast-groups.svg \
	yast-hardware.svg \
	yast-heartbeat.svg \
	yast-host.svg \
	yast-http-server.svg \
	yast-hwinfo.svg \
	yast-idedma.svg \
	yast-inetd.svg \
	yast-inst-mode.svg \
	yast-instserver.svg \
	yast-irda.svg \
	yast-iscsi-client.svg \
	yast-iscsi-server.svg \
	yast-isdn.svg \
	yast-isns.svg \
	yast-joystick.svg \
	yast-kerberos.svg \
	yast-keyboard.svg \
	yast-language.svg \
	yast-lan.svg \
	yast-ldap-browser.svg \
	yast-ldap-server.svg \
	yast-ldap.svg \
	yast-license.svg \
	yast-lvm_config.svg \
	yast-mail-server.svg \
	yast-mail.svg \
	yast-messages.svg \
	yast-misc.svg \
	yast-modem.svg \
	yast-mouse.svg \
	yast-network_devices.svg \
	yast-network_services.svg \
	yast-network.svg \
	yast-nfs_server.svg \
	yast-nfs.svg \
	yast-nis_server.svg \
	yast-nis.svg \
	yast-ntp-client.svg \
	yast-online_update.svg \
	yast-pci_id.svg \
	yast-power-management.svg \
	yast-powertweak.svg \
	yast-printer.svg \
	yast-product-registration.svg \
	yast-profile-manager.svg \
	yast-proxy.svg \
	yast-release-notes.svg \
	yast-remote.svg \
	yast-restore.svg \
	yast-routing.svg \
	yast-samba-client.svg \
	yast-samba-server.svg \
	yast-scanner.svg \
	yast-security.svg \
	yast-slp-server.svg \
	yast-software.svg \
	yast-sound.svg \
	yast_source.svg \
	yast-sudoers.svg \
	yast-support.svg \
	yast-sw_single.svg \
	yast-sw_source.svg \
	yast-sysconfig.svg \
	yast-system.svg \
	yast-tftp-server.svg \
	yast-timezone.svg \
	yast-tv.svg \
	yast-uml.svg \
	yast-update.svg \
	yast-vdisk.svg \
	yast-vendor.svg \
	yast-wol.svg \
	yast-x11.svg \
	yast-xpram.svg \
	yast-yast-language.svg \
	yast-zfcp.svg \
	yeahwm.svg \
	yumex.svg \
	zen-icon.svg \
	zim.svg

dist_noinst_DATA = \
	$(hicolor_ICONS) \
	$(pixmap_ICONS)

install-data-hook:
	$(NORMAL_INSTALL)
	@x="$(DESTDIR)$(icondir)/" ; \
	test -d "$$x" || $(MKDIR_P) "$$x" ; \
	list="$(hicolor_ICONS)" ; for f in $$list ; do \
		p=`basename "$$f" .svg`.png ; \
		g=`basename "$$f" .svg`.svg ; \
		d=; if test -f "$(srcdir)/$$f" ; then d="$(srcdir)/" ; fi ; \
		t="$(DESTDIR)$(datadir)/icons/hicolor/scalable/apps/" ; \
		test -d "$$t" || $(MKDIR_P) "$$t" ; \
		echo "  INST  $$t$$g" ; \
		rsvg-convert -w 48 -h 48 -z 1.0 -f svg "$$d$$f" | sed -e 's,"48pt","48px",g' >"$$t$$g" ; \
		echo "  INST  $$x$$g" ; \
		rm -f "$$x$$g" ; ln -sf "../../icons/hicolor/scalable/apps/$$g" "$$x$$g" ; \
		if test "$$p" = "xlogo.png" -o "$$p" = "arch-logo.png"; then \
			sizes="16 22 24 32 36 48 56 64 72 96 100 128 256" ; \
		else \
			sizes="16 24 32 48 56 64" ; \
		fi ; \
		for s in $$sizes ; do \
			t="$(DESTDIR)$(datadir)/icons/hicolor/$${s}x$${s}/apps/" ; \
			test -d "$$t" || $(MKDIR_P) "$$t" ; \
			echo "  INST  $$t$$p" ; \
			rsvg-convert -w $$s -h $$s -z 1.0 -f png "$$x$$g" -o "$$t$$p" ; \
		done ; \
		echo "  INST  $$x$$p" ; \
		rm -f "$$x$$p" ; ln -sf "../../icons/hicolor/48x48/apps/$$p" "$$x$$p" ; \
	done ; \
	list="$(pixmap_ICONS)" ; for f in $$list ; do \
		d=; if test -f "$(srcdir)/$$f" ; then d="$(srcdir)/" ; fi ; \
		case "$$f" in \
		*.png) \
			echo " INST  $$x$$f" ; \
			$(INSTALL_DATA) "$$d$$f" "$$x" ;; \
		*.xpm) \
			echo " INST  $$x$$f" ; \
			$(INSTALL_DATA) "$$d$$f" "$$x" ;; \
		*.svg) \
			p=`basename "$$f" .svg`.png ; \
			g=`basename "$$f" .svg`.svg ; \
			echo "  INST  $$x$$g" ; \
			rsvg-convert -w 48 -h 48 -z 1.0 -f svg "$$d$$f" | sed -e 's,"48pt","48px",g' >"$$x$$g" ; \
			echo "  INST  $$x$$p" ; \
			rsvg-convert -w 48 -h 48 -z 1.0 -f png "$$x$$g" -o "$$x$$p" ;; \
		esac ; \
	done

uninstall-hook:
	$(NORMAL_UNINSTALL)
	@x="$(DESTDIR)$(icondir)/" ; \
	list="$(hicolor_ICONS)" ; for f in $$list ; do \
		p=`basename "$$f" .svg`.png ; \
		g=`basename "$$f" .svg`.svg ; \
		t="$(DESTDIR)$(datadir)/icons/hicolor/scalable/apps/" ; \
		rm -fv "$$t$$g" ; \
		rm -fv "$$x$$g" ; \
		if test "$$p" = "xlogo.png" -o "$$p" = "arch-logo.png"; then \
			sizes="16 22 24 32 36 48 56 64 72 96 100 128 256" ; \
		else \
			sizes="16 24 32 48 56 64" ; \
		fi ; \
		for s in $$sizes ; do \
			t="$(DESTDIR)$(datadir)/icons/hicolor/$${s}x$${s}/apps/" ; \
			rm -fv "$$t$$p" ; \
		done ; \
		rm -fv "$$x$$p" ; \
	done ; \
	list="$(pixmap_ICONS)" ; for f in $$list ; do \
		case "$$f" in \
		*.png) \
			p=`basename "$$f"` ; rm -fv "$$x$$p" ;; \
		*.xpm) \
			p=`basename "$$f"` ; rm -fv "$$x$$p" ;; \
		*.svg) \
			p=`basename "$$f" .svg`.png ; rm -fv "$$x$$p" ; \
			g=`basename "$$f" .svg`.svg ; rm -fv "$$x$$g" ;; \
		esac ; \
	done

