
dist_tray_DATA = \
	alltray.desktop \
	cbatticon.desktop \
	dhcpcd-gtk.desktop \
	docker-tray.desktop \
	fbxkb.desktop \
	ftmenu.desktop \
	gatotray.desktop \
	gnome-screenshot.desktop \
	knetworkmanager.desktop \
	lalcal.desktop \
	mailtc.desktop \
	menutray.desktop \
	moc-tray.desktop \
	peksystray.desktop \
	pnmixer.desktop \
	retrovol.desktop \
	sbxkb.desktop \
	sd-applet.desktop \
	stalonetray.desktop \
	trayer.desktop \
	trayion.desktop \
	wmsystemtray.desktop \
	xdg-monitor.desktop \
	xdg-traymenu.desktop \
	xfce4-clipman-plugin.desktop \
	xfce4-notes.desktop \
	xmms2tray.desktop

