
#dist_sess_DATA = \
#	2bwm.desktop \
#	adwm.desktop \
#	aewm.desktop \
#	aewm++.desktop \
#	AfterStep.desktop \
#	awesome.desktop \
#	blackbox.desktop \
#	bspwm.desktop \
#	compiz.desktop \
#	ctwm.desktop \
#	cwm.desktop \
#	dwm.desktop \
#	e16-gnome2-session.desktop \
#	e16-gnome3-session.desktop \
#	e16-kde-session.desktop \
#	e16-session.desktop \
#	echinus.desktop \
#	ede.desktop \
#	enlightenment.desktop \
#	evilwm.desktop \
#	failsafewm.desktop \
#	fluxbox.desktop \
#	flwm.desktop \
#	Fvwm1.desktop \
#	fvwm2.desktop \
#	fvwm-crystal.desktop \
#	Fvwm.desktop \
#	fvwm.desktop \
#	gnome.desktop \
#	goomwwm.desktop \
#	herbstluftwm.desktop \
#	i3.desktop \
#	i3-with-shmlog.desktop \
#	icewm.desktop \
#	icewm-session.desktop \
#	Jwm.desktop \
#	larswm.desktop \
#	LXDE.desktop \
#	mantis-wm.desktop \
#	mate.desktop \
#	matwm2.desktop \
#	metacity.desktop \
#	mutter.desktop \
#	mvwm.desktop \
#	mwm.desktop \
#	openbox.desktop \
#	openbox-gnome.desktop \
#	openbox-kde.desktop \
#	pawm.desktop \
#	pekwm.desktop \
#	pekwm_kdm.desktop \
#	spectrwm.desktop \
#	ssh.desktop \
#	twm.desktop \
#	uwm.desktop \
#	velox.desktop \
#	vtwm.desktop \
#	waimea.desktop \
#	wind.desktop \
#	windwm.desktop \
#	wm2.desktop \
#	wmaker.desktop \
#	wmii.desktop \
#	wmx.desktop \
#	xdwm.desktop \
#	xfce.desktop \
#	yeahwm.desktop

